--- a/lab-stuart/frontend/.eslintrc.json
+++ b/lab-stuart/frontend/.eslintrc.json
@@ -1,35 +1,27 @@
 
 {
-  "rules": {
-    "react/prop-types": [0],
-    "quotes": ["error", "single", { "allowTemplateLiterals": true }],
-    "comma-dangle": ["error", "always-multiline"],
-    "no-console": "off",
-    "no-unused-vars": "off",
-    "indent": [ "error", 2 ],
-    "semi": ["error", "never"]
-  },
-  "plugins": [ "react" ],
-  "parserOptions": {
-    "sourceType": "module",
-    "ecmaFeatures": {
-      "experimentalObjectRestSpread": true,
-      "module": true,
-      "jsx": true
-    }
-  },
   "env": {
-    "es6": true,
+    "browser": true,
     "node": true,
+    "commonjs": true,
     "jest": true,
-    "browser": true
+    "es6": true
   },
   "globals": {
-    "__API_URI__": false,
-    "__TITLE__": false,
-    "__DEBUG__": false
+    "err": true,
+    "req": true,
+    "res": true,
+    "next": true
   },
-  "extends": [
-    "eslint:recommended"
-  ]
+  "extends": "eslint:recommended",
+  "parserOptions": {
+    "sourceType": "module"
+  },
+  "rules": {
+    "no-console": "off",
+    "indent": [ "error", 2 ],
+    "quotes": ["error", "single", { "allowTemplateLiterals": true }],
+    "comma-dangle": ["error", "always-multiline"],
+    "semi": [ "error", "always" ]
+  }
 }
