--- a/lab-stuart/frontend/package.json
+++ b/lab-stuart/frontend/package.json
@@ -37,5 +37,8 @@
     "url-loader": "^0.6.2",
     "webpack": "^3.8.1",
     "webpack-dev-server": "^2.9.3"
+  },
+  "devDependencies": {
+    "eslint-plugin-react": "^7.4.0"
   }
 }
