--- a/lab-mark/.eslintrc.json
+++ b/lab-mark/.eslintrc.json
@@ -25,7 +25,7 @@
     "commonjs": true
   },
   "globals": {
-    "__API_URI__": false,
+    "__API_URL__": false,
     "__TITLE__": false,
     "__DEBUG__": false,
     "react": true
