--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -24,7 +24,7 @@
     "browser": true
   },
   "globals": {
-    "API_URL": false,
+    "__API_URL__": false,
     "__API_URI__": false,
     "__TITLE__": false,
     "__DEBUG__": false
