Added reducer tests

--- a/lab-stuart/frontend/package.json
+++ b/lab-stuart/frontend/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "webpack",
     "watch": "webpack-dev-server --inline --hot",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
@@ -39,6 +39,7 @@
     "webpack-dev-server": "^2.9.3"
   },
   "devDependencies": {
-    "eslint-plugin-react": "^7.4.0"
+    "eslint-plugin-react": "^7.4.0",
+    "jest": "^21.2.1"
   }
 }
