--- a/lab-christina/frontend/package.json
+++ b/lab-christina/frontend/package.json
@@ -41,6 +41,7 @@
     "uglifyjs-webpack-plugin": "^1.0.1",
     "url-loader": "^0.6.2",
     "webpack": "^3.8.1",
+    "webpack-clean-plugin": "^0.2.3",
     "webpack-dev-server": "^2.9.3"
   }
 }
