Implementing frontend searching

--- a/lab-stuart/backend/package.json
+++ b/lab-stuart/backend/package.json
@@ -17,7 +17,8 @@
     "test": "jest -i --coverage",
     "dbonWin": "mkdir -p $HOME/db && mongod --dbpath $HOME/db",
     "dbon": "mkdir -p ./db && mongod --dbpath ./db",
-    "dboff": "killall mongod"
+    "dboff": "killall mongod",
+    "charityPopulate": "node bin/load-charities.js bin/asset/charity.json"
   },
   "repository": {
     "type": "git",
