--- a/lab-christina/frontend/package.json
+++ b/lab-christina/frontend/package.json
@@ -40,6 +40,7 @@
     "superagent": "^3.8.0",
     "uglifyjs-webpack-plugin": "^1.0.1",
     "url-loader": "^0.6.2",
+    "validator": "^9.1.1",
     "webpack": "^3.8.1",
     "webpack-clean-plugin": "^0.2.3",
     "webpack-dev-server": "^2.9.3"
