--- a/lab-mark/backend/package.json
+++ b/lab-mark/backend/package.json
@@ -49,6 +49,7 @@
     "jsonwebtoken": "^8.1.0",
     "mongoose": "^4.12.5",
     "morgan": "^1.9.0",
-    "multer": "^1.3.0"
+    "multer": "^1.3.0",
+    "socket.io": "^2.0.4"
   }
 }
