--- a/lab-katherine/frontend/package.json
+++ b/lab-katherine/frontend/package.json
@@ -28,8 +28,10 @@
     "extract-text-webpack-plugin": "^3.0.2",
     "faker": "^4.1.0",
     "file-loader": "^1.1.5",
+    "font-awesome-sass": "^4.7.0",
     "html-webpack-plugin": "^2.30.1",
     "node-sass": "^4.5.3",
+    "raw-loader": "^0.5.1",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-redux": "^5.0.6",
