--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -1,4 +1,15 @@
+###### Personal
+.tern-project
+*.maybe.*
+.vscode
+build
+temp
+.env
+db
+
+
 # Created by https://www.gitignore.io/api/osx,linux,node,vim
+
 
 ### OSX ###
 .DS_Store
@@ -64,11 +75,4 @@ Session.vim
 # auto-generated tag files
 tags
 
-###### Personal
-.tern-project
-.vscode
-build
-temp
-.env
-db
 
