--- a/lab-christina/frontend/package.json
+++ b/lab-christina/frontend/package.json
@@ -11,7 +11,7 @@
   "scripts": {
     "build": "webpack",
     "watch": "webpack-dev-server --inline --hot",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --i"
   },
   "keywords": [],
   "author": "",
@@ -29,6 +29,7 @@
     "faker": "^4.1.0",
     "file-loader": "^1.1.5",
     "html-webpack-plugin": "^2.30.1",
+    "jest": "^21.2.1",
     "node-sass": "^4.5.3",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
